# opencv-object-recognition

./: CMakeCache.txt  CMakeLists.txt  ColorTracker.cpp  ColorTracker.h  Makefile  Object.cpp  Object.h  ObjectDetector.cpp  ObjectDetector.h  cmake_install.cmake  tcc_app  tcc_app.cpp
